--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body{
 .container{
   width: 980px;
   margin: 0 auto;
-  position: relative;
   min-height: 100%;
 }
 ul{
@@ -96,17 +95,17 @@ ul.top_menu{
 .contact_form td{
   padding-left:10px;
 }
+.contact_form .button_area{
+  text-align: center;
+}
 .contact_form .your_data,.inquiry{
   width: 480px;
-}
-.button_area{
-  text-align: center;
 }
 .button{
   color: #fff;
   font-size: 3rem;
   border: none;
-  margin: 15px;
+  margin: 10px;
   padding: 10px;
   background-color: #008B8B;
 }
@@ -114,11 +113,11 @@ ul.top_menu{
   opacity: 0.6;
 }
 .footer{
-  width: 100%;
+  width: 980px;
   height: 100px;
   bottom: 0;
   background-color: #4D4D4D;
-  position: absolute;
+  position: fixed;
   display: table;
 }
 .footer p{
